--- a/index.html
+++ b/index.html
@@ -2249,16 +2249,16 @@
                 const accountResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/account.txt', {
                     headers: {
                         'Authorization': `token ${token}`,
-                        'Accept': 'application/vnd.github.v3.raw'
+                        'Accept': 'application/vnd.github.v3+json'
                     }
                 });
 
                 let accounts = {};
                 let sha = '';
                 if (accountResponse.ok) {
-                    const accountText = await accountResponse.text();
-                    accounts = JSON.parse(accountText);
                     const accountData = await accountResponse.json();
+                    const accountText = atobUnicode(accountData.content);
+                    accounts = JSON.parse(accountText);
                     sha = accountData.sha;
                 }
 
