--- a/index.html
+++ b/index.html
@@ -2081,8 +2081,8 @@
         const authButtons = document.createElement('div');
         authButtons.className = 'auth-buttons';
         authButtons.innerHTML = `
-            <a href="https://example.com/inscription" id="signup-button"><i class="fas fa-user-plus"></i> Inscription</a>
-            <a href="https://example.com/connexion" id="login-button"><i class="fas fa-sign-in-alt"></i> Connexion</a>
+            <a href="https://aalltra.github.io/sponsor1/inscription" id="signup-button"><i class="fas fa-user-plus"></i> Inscription</a>
+            <a href="https://aalltra.github.io/sponsor1/connexion" id="login-button"><i class="fas fa-sign-in-alt"></i> Connexion</a>
         `;
         headerContent.appendChild(authButtons);
 
@@ -2591,7 +2591,7 @@
                         </div>
                         <button class="review-button" onclick="window.openReviewModal('${componentName}')"><i class="fas fa-star"></i> Mettre une note</button>
                     </div>
-                    <a href="https://example.com/reviews" class="view-reviews" onclick="window.viewReviews('${componentName}')"><i class="fas fa-eye"></i> Voir les avis</a>
+                    <a href="https://aalltra.github.io/sponsor1/reviews" class="view-reviews" onclick="window.viewReviews('${componentName}')"><i class="fas fa-eye"></i> Voir les avis</a>
                 `;
                 componentList.appendChild(card);
             });
