--- a/index.html
+++ b/index.html
@@ -2591,7 +2591,7 @@
                         </div>
                         <button class="review-button" onclick="window.openReviewModal('${componentName}')"><i class="fas fa-star"></i> Mettre une note</button>
                     </div>
-                    <a href="https://aalltra.github.io/sponsor1/reviews" class="view-reviews" onclick="window.viewReviews('${componentName}')"><i class="fas fa-eye"></i> Voir les avis</a>
+                    <a href="https://example.com/reviews" class="view-reviews" onclick="window.viewReviews('${componentName}')"><i class="fas fa-eye"></i> Voir les avis</a>
                 `;
                 componentList.appendChild(card);
             });
