--- a/index.html
+++ b/index.html
@@ -2057,32 +2057,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-        // Base64 Encoding and Decoding Functions
-        function base64EncodeUnicode(str) {
-            const encoder = new TextEncoder();
-            const bytes = encoder.encode(str);
-            let binary = '';
-            bytes.forEach((b) => binary += String.fromCharCode(b));
-            return btoa(binary);
-        }
-
-        function base64DecodeUnicode(str) {
-            const binary = atob(str);
-            const bytes = new Uint8Array(binary.length);
-            for (let i = 0; i < binary.length; i++) {
-                bytes[i] = binary.charCodeAt(i);
-            }
-            const decoder = new TextDecoder();
-            return decoder.decode(bytes);
-        }
-
         // Boutons Inscription et Connexion
         const headerContent = document.querySelector('.header-content');
         const authButtons = document.createElement('div');
         authButtons.className = 'auth-buttons';
         authButtons.innerHTML = `
-            <a href="https://example.com/inscription" id="signup-button"><i class="fas fa-user-plus"></i> Inscription</a>
-            <a href="https://example.com/connexion" id="login-button"><i class="fas fa-sign-in-alt"></i> Connexion</a>
+            <a href="#inscription" id="signup-button"><i class="fas fa-user-plus"></i> Inscription</a>
+            <a href="#connexion" id="login-button"><i class="fas fa-sign-in-alt"></i> Connexion</a>
         `;
         headerContent.appendChild(authButtons);
 
@@ -2194,7 +2175,25 @@
         const encodedGithubToken = '2$h2$i2$q2$`2$[2$p2$52$C2$R2$z2$Q2${2$G2$22$j2$y2$:2$j2$S2$r2$e2$X2$q2$x2$j2$C2$K2$M2$N2$T2$C2$42$i2$Q2$42$T2$Z2$y2$Q2$u';
 
         // Fonction pour encoder une chaîne Unicode en base64
-        async function getBase64(file) {
+        function btoaUnicode(str) {
+            return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
+                function(match, p1) {
+                    return String.fromCharCode('0x' + p1);
+                }
+            ));
+        }
+
+        // Fonction pour décoder une chaîne base64 en Unicode
+        function atobUnicode(str) {
+            return decodeURIComponent(
+                Array.prototype.map.call(atob(str), function(c) {
+                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                }).join('')
+            );
+        }
+
+        // Fonction pour convertir un fichier en base64
+        function getBase64(file) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
                 reader.readAsDataURL(file);
@@ -2243,7 +2242,7 @@
                     },
                     body: JSON.stringify({
                         message: `Upload logo ${logoName}`,
-                        content: base64EncodeUnicode(logoBase64)
+                        content: logoBase64
                     })
                 });
 
@@ -2266,7 +2265,7 @@
                 let sha = '';
                 if (accountResponse.ok) {
                     const accountData = await accountResponse.json();
-                    const accountText = base64DecodeUnicode(accountData.content);
+                    const accountText = atobUnicode(accountData.content);
                     accounts = JSON.parse(accountText);
                     sha = accountData.sha;
                 }
@@ -2290,7 +2289,7 @@
                     },
                     body: JSON.stringify({
                         message: 'Ajout d\'un nouveau compte',
-                        content: base64EncodeUnicode(JSON.stringify(accounts, null, 2)),
+                        content: btoaUnicode(JSON.stringify(accounts, null, 2)),
                         sha: sha || undefined
                     })
                 });
@@ -2338,9 +2337,8 @@
                     throw new Error('Échec de la récupération des comptes.');
                 }
 
-                const accountsText = accountResponse.body ? await accountResponse.text() : '';
-                const decodedAccountsText = base64DecodeUnicode(accountsText);
-                const accounts = JSON.parse(decodedAccountsText);
+                const accountsText = await accountResponse.text();
+                const accounts = JSON.parse(accountsText);
                 let found = false;
                 let userAccount = null;
 
@@ -2452,7 +2450,7 @@
             try {
                 const response = await fetch('https://raw.githubusercontent.com/Aalltra/sponsor1/main/review.txt');
                 const text = await response.text();
-                const decodedText = base64DecodeUnicode(text);
+                const decodedText = atobUnicode(text);
                 const parsedData = JSON.parse(decodedText);
 
                 reviewsData = {};
@@ -2485,22 +2483,20 @@
                 .join('');
         }
 
-        function base64EncodeUnicode(str) {
-            const encoder = new TextEncoder();
-            const bytes = encoder.encode(str);
-            let binary = '';
-            bytes.forEach((b) => binary += String.fromCharCode(b));
-            return btoa(binary);
+        function btoaUnicode(str) {
+            return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
+                function(match, p1) {
+                    return String.fromCharCode('0x' + p1);
+                }
+            ));
         }
 
-        function base64DecodeUnicode(str) {
-            const binary = atob(str);
-            const bytes = new Uint8Array(binary.length);
-            for (let i = 0; i < binary.length; i++) {
-                bytes[i] = binary.charCodeAt(i);
-            }
-            const decoder = new TextDecoder();
-            return decoder.decode(bytes);
+        function atobUnicode(str) {
+            return decodeURIComponent(
+                Array.prototype.map.call(atob(str), function(c) {
+                    return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+                }).join('')
+            );
         }
 
         async function saveReviewsToGitHub() {
@@ -2532,7 +2528,7 @@
                     },
                     body: JSON.stringify({
                         message: 'Mise à jour des avis',
-                        content: base64EncodeUnicode(JSON.stringify(reviewsData, null, 2)),
+                        content: btoaUnicode(JSON.stringify(reviewsData, null, 2)),
                         sha: sha
                     })
                 });
@@ -2591,7 +2587,7 @@
                         </div>
                         <button class="review-button" onclick="window.openReviewModal('${componentName}')"><i class="fas fa-star"></i> Mettre une note</button>
                     </div>
-                    <a href="https://example.com/reviews" class="view-reviews" onclick="window.viewReviews('${componentName}')"><i class="fas fa-eye"></i> Voir les avis</a>
+                    <a href="#reviews" class="view-reviews" onclick="window.viewReviews('${componentName}')"><i class="fas fa-eye"></i> Voir les avis</a>
                 `;
                 componentList.appendChild(card);
             });
