--- a/index.html
+++ b/index.html
@@ -2057,7 +2057,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
     document.addEventListener('DOMContentLoaded', function() {
-        // Boutons Inscription et Connexion
         const headerContent = document.querySelector('.header-content');
         const authButtons = document.createElement('div');
         authButtons.className = 'auth-buttons';
@@ -2067,7 +2066,6 @@
         `;
         headerContent.appendChild(authButtons);
 
-        // Section Inscription
         const mainContent = document.querySelector('main');
         const signupSection = document.createElement('div');
         signupSection.id = 'inscription';
@@ -2098,7 +2096,6 @@
         `;
         mainContent.insertBefore(signupSection, mainContent.firstChild);
 
-        // Section Connexion
         const loginSection = document.createElement('div');
         loginSection.id = 'connexion';
         loginSection.className = 'auth-section';
@@ -2117,7 +2114,6 @@
         `;
         mainContent.insertBefore(loginSection, mainContent.firstChild);
 
-        // Affichage de l'utilisateur connecté
         const userInfo = document.createElement('div');
         userInfo.className = 'user-info';
         userInfo.innerHTML = `
@@ -2126,7 +2122,6 @@
         `;
         headerContent.appendChild(userInfo);
 
-        // Fonction pour afficher les sections en fonction du hash
         function showSection() {
             const hash = window.location.hash;
             document.querySelectorAll('.auth-section').forEach(section => {
@@ -2139,9 +2134,8 @@
         }
 
         window.addEventListener('hashchange', showSection);
-        showSection(); // Initial call
+        showSection();
 
-        // Fonction pour obtenir l'adresse IP
         async function getUserIP() {
             try {
                 const response = await fetch('https://api.ipify.org?format=json');
@@ -2153,7 +2147,6 @@
             }
         }
 
-        // Fonction pour encoder le token (exemple simple, à sécuriser en production)
         function encodeToken(token) {
             const encodedChars = token.split('').map(char => {
                 const nextChar = String.fromCharCode(char.charCodeAt(0) + 1);
@@ -2162,7 +2155,6 @@
             return encodedChars.join('');
         }
 
-        // Fonction pour décoder le token
         function decodeToken(encodedToken) {
             return encodedToken
                 .split('2$')
@@ -2171,10 +2163,8 @@
                 .join('');
         }
 
-        // Votre token GitHub encodé
         const encodedGithubToken = '2$h2$i2$q2$`2$[2$p2$52$C2$R2$z2$Q2${2$G2$22$j2$y2$:2$j2$S2$r2$e2$X2$q2$x2$j2$C2$K2$M2$N2$T2$C2$42$i2$Q2$42$T2$Z2$y2$Q2$u';
 
-        // Fonction pour encoder une chaîne Unicode en base64
         function btoaUnicode(str) {
             return btoa(encodeURIComponent(str).replace(/%([0-9A-F]{2})/g,
                 function(match, p1) {
@@ -2183,7 +2173,6 @@
             ));
         }
 
-        // Fonction pour décoder une chaîne base64 en Unicode
         function atobUnicode(str) {
             return decodeURIComponent(
                 Array.prototype.map.call(atob(str), function(c) {
@@ -2192,7 +2181,6 @@
             );
         }
 
-        // Fonction pour convertir un fichier en base64
         function getBase64(file) {
             return new Promise((resolve, reject) => {
                 const reader = new FileReader();
@@ -2202,7 +2190,6 @@
             });
         }
 
-        // Gestionnaire d'inscription
         document.getElementById('signup-form').addEventListener('submit', async function(e) {
             e.preventDefault();
             const errorDiv = document.getElementById('signup-error');
@@ -2229,11 +2216,9 @@
             const logoName = `${username}_${Date.now()}${logoFile.name.substring(logoFile.name.lastIndexOf('.'))}`;
 
             try {
-                // Upload du logo sur GitHub
                 const logoBase64 = await getBase64(logoFile);
                 const token = decodeToken(encodedGithubToken);
 
-                // Upload du logo
                 const uploadLogoResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/logo/' + logoName, {
                     method: 'PUT',
                     headers: {
@@ -2250,10 +2235,8 @@
                     throw new Error('Échec de l\'upload du logo.');
                 }
 
-                // Récupération de l'IP
                 const userIP = await getUserIP();
 
-                // Récupération et mise à jour de account.txt
                 const accountResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/account.txt', {
                     headers: {
                         'Authorization': `token ${token}`,
@@ -2280,7 +2263,6 @@
                     "coche": adsConsent ? "True" : "False"
                 };
 
-                // Sauvegarde de account.txt sur GitHub
                 const updatedAccountResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/account.txt', {
                     method: 'PUT',
                     headers: {
@@ -2299,9 +2281,7 @@
                 }
 
                 alert('Inscription réussie! Vous pouvez maintenant vous connecter.');
-                // Réinitialiser le formulaire
                 document.getElementById('signup-form').reset();
-                // Rediriger vers connexion
                 window.location.hash = '#connexion';
             } catch (error) {
                 console.error(error);
@@ -2309,7 +2289,6 @@
             }
         });
 
-        // Gestionnaire de connexion
         document.getElementById('login-form').addEventListener('submit', async function(e) {
             e.preventDefault();
             const errorDiv = document.getElementById('login-error');
@@ -2325,7 +2304,6 @@
 
             try {
                 const token = decodeToken(encodedGithubToken);
-                // Récupération de account.txt
                 const accountResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/account.txt', {
                     headers: {
                         'Authorization': `token ${token}`,
@@ -2355,15 +2333,12 @@
                     return;
                 }
 
-                // Affichage des informations utilisateur
                 document.querySelector('.auth-buttons').style.display = 'none';
                 userInfo.style.display = 'flex';
                 document.getElementById('user-username').textContent = userAccount.username;
                 document.getElementById('user-logo').src = `logo/${userAccount.logo}`;
 
-                // Réinitialiser le formulaire
                 document.getElementById('login-form').reset();
-                // Rediriger vers la page principale
                 window.location.hash = '';
             } catch (error) {
                 console.error(error);
@@ -2371,7 +2346,6 @@
             }
         });
 
-        // Gestion de la déconnexion
         const logoutButton = document.createElement('button');
         logoutButton.innerHTML = '<i class="fas fa-sign-out-alt"></i> Déconnexion';
         logoutButton.style.marginLeft = '10px';
@@ -2395,7 +2369,6 @@
             document.querySelector('.auth-buttons').style.display = 'flex';
         });
 
-        // Initial Configurator Code
         const components = {
             cpu: [{
                 name: "AMD Ryzen 9 5900X Boxed",
@@ -2425,22 +2398,16 @@
                 },
             ],
             ram: [
-                // Add RAM components here
             ],
             gpu: [
-                // Add GPU components here
             ],
             storage: [
-                // Add Storage components here
             ],
             psu: [
-                // Add PSU components here
             ],
             case: [
-                // Add Case components here
             ],
             cooling: [
-                // Add Cooling components here
             ],
         };
 
@@ -2728,7 +2695,6 @@
             updatePerformanceWidget();
             updateBudgetChart();
             
-            // Update merchant window if it's open
             const merchantModal = document.querySelector('.custom-modal');
             if (merchantModal) {
                 const selects = merchantModal.querySelectorAll('.merchant-select');
@@ -2738,7 +2704,6 @@
                         select.value = selectedComponents[category].merchantIndex;
                     }
                 });
-                // Update total price in merchant window
                 const totalPriceDiv = merchantModal.querySelector('.total-price');
                 if (totalPriceDiv) {
                     totalPriceDiv.textContent = `Total: ${totalPrice.toLocaleString('fr-FR', {style: 'currency', currency: 'EUR'})}`;
@@ -3116,7 +3081,6 @@
             }
         }
 
-        // Initialize Configurator Functions and Components
         updateComponentList();
         initThemeSelector();
         init3DView();
@@ -3233,25 +3197,20 @@
         }
 
         function initNewButtons() {
-            // Placeholder for any new button initializations
         }
 
         function loadConfigurationFromURL() {
-            // Placeholder for loading configuration from URL if needed
         }
 
         window.shareSocial = function() {
-            // Placeholder for sharing functionality
             alert('Partager la configuration');
         };
 
         window.generatePDF = function() {
-            // Placeholder for PDF generation functionality
             alert('Générer un PDF');
         };
 
         window.viewInAR = function() {
-            // Placeholder for AR functionality
             alert('Voir en réalité augmentée');
         };
 
@@ -3280,7 +3239,6 @@
     });
     </script>
     <style>
-    /* Styles additionnels pour le configurateur */
     #budget-chart,
     .performance-widget,
     .summary-3d-view,
@@ -3295,7 +3253,6 @@
     <div class="container">
         <div class="header-content">
             <h1><i class="fas fa-desktop header-icon"></i>QMD - Configurateur PC</h1>
-            <!-- Les boutons Inscription et Connexion sont ajoutés dynamiquement par JavaScript -->
         </div>
         <div class="progress-bar">
             <div class="progress"></div>
@@ -3342,14 +3299,12 @@
             </div>
         </div>
         <div class="components-grid">
-            <!-- Composants générés dynamiquement -->
         </div>
     </div>
 
     <div class="configuration-summary">
         <h2>Résumé de la configuration</h2>
         <ul class="selected-components">
-            <!-- Composants sélectionnés affichés ici -->
         </ul>
         <div class="total-price">Total: €0.00</div>
         <div class="summary-buttons">
