--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html lang="fr">
-<base href="https://aalltra.github.io/QMD/">
+<base href="https://aalltra.github.io/sponsor1/">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
