--- a/index.html
+++ b/index.html
@@ -2176,13 +2176,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
 document.addEventListener('DOMContentLoaded', function() {
-  // Ajouter l'icône de chat
   const chatIcon = document.createElement('div');
   chatIcon.className = 'chat-icon';
   chatIcon.innerHTML = '<i class="fas fa-comments"></i>';
   document.body.appendChild(chatIcon);
 
-  // Ajouter la fenêtre de chat
   const chatWindow = document.createElement('div');
   chatWindow.className = 'chat-window';
   chatWindow.innerHTML = `
@@ -2212,7 +2210,9 @@ document.addEventListener('DOMContentLoaded', function() {
     return false;
   }
 
-  // Afficher/cacher la fenêtre de chat
+  // Vérification périodique de la connexion
+  setInterval(checkLogin, 1000);
+
   chatIcon.addEventListener('click', () => {
     if (!checkLogin()) {
       chatWindow.style.display = 'block';
@@ -2233,7 +2233,6 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 
-  // Charger les messages
   async function loadMessages() {
     try {
       const token = decodeToken(encodedGithubToken);
@@ -2255,7 +2254,6 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   }
 
-  // Afficher les messages
   function displayMessages(messages) {
     const messagesDiv = chatWindow.querySelector('.chat-messages');
     messagesDiv.innerHTML = '';
@@ -2278,27 +2276,25 @@ document.addEventListener('DOMContentLoaded', function() {
     messagesDiv.scrollTop = messagesDiv.scrollHeight;
   }
 
-  // Envoyer un message
   async function sendMessage(content) {
     try {
       const token = decodeToken(encodedGithubToken);
       
-      // Récupérer les messages existants
-      const response = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/discussion.txt', {
+      // Récupérer les messages existants et le SHA
+      const getResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/discussion.txt', {
         headers: {
           'Authorization': `token ${token}`,
-          'Accept': 'application/vnd.github.v3.raw'
+          'Accept': 'application/vnd.github.v3+json'
         }
       });
 
-      let messages = {};
-      let sha = '';
-      
-      if (response.ok) {
-        const data = await response.json();
-        messages = data;
-        sha = data.sha;
+      if (!getResponse.ok) {
+        throw new Error('Erreur lors de la récupération des messages');
       }
+
+      const fileData = await getResponse.json();
+      const currentContent = atob(fileData.content);
+      let messages = JSON.parse(currentContent);
 
       // Ajouter le nouveau message
       const messageCount = Object.keys(messages).length + 1;
@@ -2309,7 +2305,7 @@ document.addEventListener('DOMContentLoaded', function() {
         reply: "None"
       };
 
-      // Sauvegarder les messages
+      // Sauvegarder les messages avec le SHA
       const updateResponse = await fetch('https://api.github.com/repos/Aalltra/sponsor1/contents/discussion.txt', {
         method: 'PUT',
         headers: {
@@ -2319,7 +2315,7 @@ document.addEventListener('DOMContentLoaded', function() {
         body: JSON.stringify({
           message: 'Nouveau message',
           content: btoa(JSON.stringify(messages, null, 2)),
-          sha: sha || undefined
+          sha: fileData.sha
         })
       });
 
@@ -2327,14 +2323,12 @@ document.addEventListener('DOMContentLoaded', function() {
         throw new Error('Erreur lors de l\'envoi du message');
       }
 
-      // Recharger les messages
       loadMessages();
     } catch (error) {
       console.error('Erreur:', error);
     }
   }
 
-  // Gérer l'envoi de message
   const input = chatWindow.querySelector('input');
   const sendButton = chatWindow.querySelector('button');
 
@@ -2353,7 +2347,6 @@ document.addEventListener('DOMContentLoaded', function() {
     }
   });
 
-  // Recharger les messages périodiquement
   setInterval(() => {
     if (chatWindow.style.display === 'block' && isLoggedIn) {
       loadMessages();
